[tool.poetry]
name = "repl_nix_Mother-AI-Discord-Bot"
version = "0.1.0"
description = ""
authors = ["BeratDM <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.5"
replit = "^3.2.4"
requests = "^2.31.0"
discord = "^1.7.3"
Command = "^0.1.0"
"discord.py" = "^1.7.3"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
